# ArduinoRaspberry-Robot

Arduino/: NOTES.md
Arduino/Arduino-CMake-Toolchain/Examples_build/: ArduinoSystem.cmake  BoardOptions.cmake.bak  CMakeCache.txt  ExecuteRecipe.cmake  FirmwareSizePrint.cmake  FirmwareUpload.cmake  Makefile  cmake_install.cmake
Arduino/Arduino-CMake-Toolchain/Examples_build/01_hello_world/: Makefile  cmake_install.cmake  hello_world.elf  hello_world.hex
Arduino/Arduino-CMake-Toolchain/Examples_build/02_arduino_lib/: Makefile  cmake_install.cmake
Arduino/Arduino-CMake-Toolchain/Examples_build/03_portable_app/: Makefile  cmake_install.cmake
Arduino/Arduino-CMake-Toolchain/Examples_build/03_portable_app/abstraction/app_entry/: Makefile  cmake_install.cmake
Arduino/Arduino-CMake-Toolchain/Examples_build/03_portable_app/abstraction/app_stdio/: Makefile  cmake_install.cmake
Arduino/Arduino-CMake-Toolchain/Examples_build/04_multi_app/: Makefile  cmake_install.cmake
Arduino/Arduino-CMake-Toolchain/Examples_build/05_auto_link/: Makefile  cmake_install.cmake
Arduino/Proyect_Pi_Arduino/: CMakeLists.txt  arduino_lib.cpp  autonomous_robot.cpp
Arduino/Proyect_Pi_Arduino/libraries/HC_SR04/: HC_SR04.cpp  HC_SR04.h
Arduino/Proyect_Pi_Arduino/libraries/L298N/: L298NX2.cpp  L298NX2.h  library.properties
